--- a/config.json
+++ b/config.json
@@ -10,6 +10,7 @@
 				"urlWebHook": "https://hooks.slack.com/services/abc/def/ghi",
 				"hookName": "Hacker News",
 				"urlIcon": "http://radio3.io/icons/clarus.gif",
+				"emojiIcon": ":cat:",
 				"channel": "#hackernews"
 				}
 			}
